<?xml version="1.0"?>
<package format="2">
  <name>advanced_navigation_driver</name>
  <version>1.0.0</version>
  <description>The Advanced Navigation driver package for ROS.</description>

  <maintainer email="support@advancednavigation.com.au">support@advancednavigation.com.au</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>
